# docs/swagger.yaml
@@ -55,12 +55,6 @@ paths:
       - description: description
         in: formData
         name: description
-        required: true
-        type: string
-      - description: password
-        in: formData
-        name: password
-        required: true
         type: string
       produces:
       - application/json
